--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a  href="index.html">home</a></li>
-                                            <li><a  href="service.html">Services</a></li>
-                                            <li><a href="About.html">about</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <li><a  href="index.html">Home</a></li>
+                                            <li><a  href="service.html">Serviços</a></li>
+                                            <li><a href="About.html">Sobre</a></li>
+                                            <li><a href="#">Páginas <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="service_details.html">service details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
