--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     <div class="location_left">
                         <div class="logo">
                             <a href="index.html">
-                                <img src="img/logo.png" alt="">
+                                <img src="img/logobalanca.png" height="50px" alt="">
                             </a>
                         </div>
                         <ul>
