--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <div class="col-xl-4 col-lg-4">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/logobalalnca.png" alt="">
                                 </a>
                             </div>
                         </div>
