--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                             <div class="header_right d-flex align-items-center">
                                 <div class="short_contact_list">
                                     <ul>
-                                        <li><a href="#"> <i class="fa fa-envelope"></i> info@docmed.com</a></li>
-                                        <li><a href="#"> <i class="fa fa-phone"></i> 1601-609 6780</a></li>
+                                        <li><a href="#"> <i class="fa fa-envelope"></i> vendas@m3balancas.com.br</a></li>
+                                        <li><a href="#"> <i class="fa fa-phone"></i> (11) 4075-4988</a></li>
                                     </ul>
                                 </div>
 
                                 <div class="book_btn d-none d-lg-block">
-                                    <a class="boxed-btn3-line" href="#">Get Free Quote</a>
+                                    <a class="boxed-btn3-line" href="#">Veja Nossos Produtos</a>
                                 </div>
                             </div>
                         </div>
