--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="col-xl-12">
                     <div class="section_title mb-50 text-center">
                         <h3>
-                            Services We Offer
+                            Services We Offer :)
                         </h3>
                     </div>
                 </div>
