--- a/index.html
+++ b/index.html
@@ -180,12 +180,24 @@
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+55 (11) 4075-4988 / 4071-1037 / 4075-3762</div>
+                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                         <a class="d-block" href="mailto:adm@m3balancas.com.br">adm@m3balancas.com.br</a>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center">
+                        <i class="fas fa-clock fa-3x mb-3 text-muted"></i>
+                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                        <div> <p> Horário de funcionamento <br/><br/>
+                            seg.:	08:00 – 17:30<br/>
+                            ter.:	08:00 – 17:30<br/>
+                            qua.:	08:00 – 17:30<br/>
+                            qui.:	08:00 – 17:30<br/>
+                            sex.:	08:00 – 17:30<br/>
+                            sáb.:	Fechado<br/>
+                            dom.:	Fechado</p></div>
                     </div>
                 </div>
             </div>
