--- a/index.html
+++ b/index.html
@@ -202,7 +202,13 @@
                 </div>
             </div>
             <div class="container">
-                <div style="overflow:hidden;width: 100%;position: relative;"><iframe width="800" height="600" src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=en&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
+                <!--Google map-->
+                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+                    <iframe src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=en&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0"
+                    style="border:0" allowfullscreen></iframe>
+                </div>
+                
+                <!--Google Maps-->
             </div>
         </section>
         <!-- Footer-->
