--- a/index.html
+++ b/index.html
@@ -176,39 +176,24 @@
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Piraporinha, Diadema – SP, 09950-300</p>
                     </div>
+                    <!--Google map-->
+                    <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
+                        <iframe src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=en&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0"
+                        style="border:0" allowfullscreen></iframe>
+                    </div>
+                    <!--Google Maps-->
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
+                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762<br/><br/>* De segunda à sexta-feira das 8:00 as 17:30</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                         <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                         <a class="d-block" href="mailto:adm@m3balancas.com.br">adm@m3balancas.com.br</a>
                     </div>
-                    <div class="col-lg-4 mr-auto text-center">
-                        <i class="fas fa-clock fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <div> <p> Horário de funcionamento <br/><br/>
-                            seg.:	08:00 – 17:30<br/>
-                            ter.:	08:00 – 17:30<br/>
-                            qua.:	08:00 – 17:30<br/>
-                            qui.:	08:00 – 17:30<br/>
-                            sex.:	08:00 – 17:30<br/>
-                            sáb.:	Fechado<br/>
-                            dom.:	Fechado</p></div>
-                    </div>
                 </div>
-            </div>
-            <div class="container">
-                <!--Google map-->
-                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-                    <iframe src="https://maps.google.com/maps?width=800&amp;height=600&amp;hl=en&amp;q=Av.%20Fagundes%20de%20Oliveira%2C%202023+(M3%20Balan%C3%A7as)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0"
-                    style="border:0" allowfullscreen></iframe>
-                </div>
-                
-                <!--Google Maps-->
             </div>
         </section>
         <!-- Footer-->
