--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Entre em contato conosco!</h2>
+                        <h2 class="mt-0">Entre em contato conosco!*</h2>
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Piraporinha, Diadema – SP, 09950-300</p>
                     </div>
@@ -183,10 +183,13 @@
                     style="border:0" allowfullscreen></iframe>
                 </div>
                 <!--Google Maps-->
+                <div class="row justify-content-center">
+                    * De segunda à sexta-feira das 8:00 as 17:30
+                </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762<br/><br/>* De segunda à sexta-feira das 8:00 as 17:30</div>
+                        <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
