--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 </div>
                 <!--Google Maps-->
                 <div class="row justify-content-center">
-                    * De segunda à sexta-feira das 8:00 as 17:30
+                  <p>* De segunda à sexta-feira das 8:00 as 17:30<br/></p>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
