--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="height: 70px;">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/assets/img/logo01.png" alt="M3 Balanças" style="height: 70%;" ></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/assets/img/logo02.png" alt="M3 Balanças"></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
