--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Sobre</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
+
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quem Somos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Serviços</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Clientes</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Qualidade</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contato</a></li>
+
                     </ul>
                 </div>
             </div>
@@ -173,9 +177,8 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="mt-0">Entre em contato conosco!*</h2>
                         <hr class="divider my-4" />
-                        <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Piraporinha, Diadema – SP, 09950-300</p>
+                        <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Vila São José - Diadema / SP&nbsp;&nbsp;&nbsp;&nbsp;09950-300</p>
                     </div>
                 </div>
                 <!--Google map-->
