--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@
                     </div>
                 </div>
                 <div class="row">
+                    <hr class="divider my-4" />
+
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
                         <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
@@ -193,7 +195,8 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <p>* De segunda à sexta-feira das 8:00 as 17:30<br/></p>
+                    <hr class="divider my-4" />
+                    <p>* De segunda à sexta-feira das 8:00 as 17:00<br/></p>
                   </div>
                 <!--Google map-->
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
