--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@
                     <div class="col-lg-8 text-center">
                         <hr class="divider my-4" />
                         <p class="text-muted mb-5">Endereço: Av. Fagundes de Oliveira, 2023 – Vila São José - Diadema / SP&nbsp;&nbsp;&nbsp;&nbsp;09950-300</p>
+                        <hr class="divider my-4" />
                     </div>
                 </div>
                 <div class="row">
-                    <hr class="divider my-4" />
-
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
                         <div>(11) 4075-4988<br/>(11) 4071-1037<br/>(11) 4075-3762</div>
@@ -195,8 +194,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <hr class="divider my-4" />
-                    <p>* De segunda à sexta-feira das 8:00 as 17:00<br/></p>
+                    <p><br/>* De segunda à sexta-feira das 8:00 as 17:00<br/></p>
                   </div>
                 <!--Google map-->
                 <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
@@ -209,7 +207,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Start Bootstrap</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - developed by rochas@gmail.com</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
