--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - developed by rochas@gmail.com</div></div>
+            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - M3 Balanças - website by rochas@gmail.com</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
