--- a/index.html
+++ b/index.html
@@ -75,30 +75,30 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-calendar text-primary"></i>
+                            <i class="fas fa-4x fa-calendar-check-o text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Manutenção Preventiva</h3>
                             <p class="text-muted mb-0">Consiste em manutenções periódicas programadas.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <i class="fas fa-4x fa-flash text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Manutenção corretiva</h3>
+                            <p class="text-muted mb-0">Consiste no conserto do equipamento com fins de torná-lo operacional.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <i class="fas fa-4x fa-balance-scale text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Calibração com ajuste</h3>
+                            <p class="text-muted mb-0">Realizamos a calibração e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <i class="fas fa-4x fa-check-square text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Serviço 4</h3>
+                            <p class="text-muted mb-0">Descrição do Serviço 4</p>
                         </div>
                     </div>
                 </div>
