--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-calendar-check-o text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-calendar-alt text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Manutenção Preventiva</h3>
                             <p class="text-muted mb-0">Consiste em manutenções periódicas programadas.</p>
                         </div>
