--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-flash text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-tools text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Manutenção corretiva</h3>
                             <p class="text-muted mb-0">Consiste no conserto do equipamento com fins de torná-lo operacional.</p>
                         </div>
