--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Compromisso com a Qualidade</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.</p>
+                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Conheça Nossos Serviços</a>
                     </div>
                 </div>
             </div>
