--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/">Home</a></li>
 
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quem Somos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#sobre">Quem Somos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Serviços</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Qualidade</a></li>
@@ -49,19 +49,19 @@
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 font-weight-light mb-5">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.<br>
                             Surgiu do desejo de prestar um atendimento personalizado às empresas de diversos segmentos, sejam estas, comércios ou indústrias.</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba Mais</a>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#sobre">Saiba Mais</a>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <!-- sobre-->
+        <section class="page-section bg-primary" id="sobre">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Compromisso com a Qualidade</h2>
+                        <h2 class="text-white mt-0">Compromisso com a qualidade</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.</p>
+                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência, oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.</p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Conheça Nossos Serviços</a>
                     </div>
                 </div>
