--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Quem Somos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Serviços</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Produtos</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Qualidade</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#quality">Qualidade</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contato</a></li>
 
                     </ul>
@@ -61,7 +61,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Compromisso com a qualidade</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência, oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.</p>
+                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência, oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.<br/><br/></p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Conheça Nossos Serviços</a>
                     </div>
                 </div>
@@ -112,8 +112,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 01</div>
+                                <div class="project-name">Marca 01</div>
                             </div>
                         </a>
                     </div>
@@ -121,8 +121,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 02</div>
+                                <div class="project-name">Marca 02</div>
                             </div>
                         </a>
                     </div>
@@ -130,8 +130,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 03</div>
+                                <div class="project-name">Marca 03</div>
                             </div>
                         </a>
                     </div>
@@ -139,8 +139,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 04</div>
+                                <div class="project-name">Marca 04</div>
                             </div>
                         </a>
                     </div>
@@ -148,8 +148,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 05</div>
+                                <div class="project-name">Marca 05</div>
                             </div>
                         </a>
                     </div>
@@ -157,14 +157,44 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Logo 06</div>
+                                <div class="project-name">Marca 06</div>
                             </div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
+                <!-- Quality -->
+                <section class="page-section" id="quality">
+                    <div class="container">
+                        <h2 class="text-center mt-0">Qualidade</h2>
+                        <hr class="divider my-4" />
+                        <div class="row">
+                            <div class="col-lg-3 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <i class="fas fa-4x fa-calendar-alt text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Manutenção Preventiva</h3>
+                                    <p class="text-muted mb-0">Consiste em manutenções periódicas programadas.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <i class="fas fa-4x fa-tools text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Manutenção corretiva</h3>
+                                    <p class="text-muted mb-0">Consiste no conserto do equipamento com fins de torná-lo operacional.</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6 text-center">
+                                <div class="mt-5">
+                                    <i class="fas fa-4x fa-balance-scale text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Calibração com ajuste</h3>
+                                    <p class="text-muted mb-0">Realizamos a calibração e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
