--- a/index.html
+++ b/index.html
@@ -173,23 +173,23 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
-                                    <i class="fas fa-4x fa-calendar-alt text-primary mb-4"></i>
-                                    <h3 class="h4 mb-2">Manutenção Preventiva</h3>
-                                    <p class="text-muted mb-0">Consiste em manutenções periódicas programadas.</p>
+                                    <i class="fas fa-4x fa-file-alt-alt text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Missão</h3>
+                                    <p class="text-muted mb-0">Missão da Empresa.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
-                                    <i class="fas fa-4x fa-tools text-primary mb-4"></i>
-                                    <h3 class="h4 mb-2">Manutenção corretiva</h3>
-                                    <p class="text-muted mb-0">Consiste no conserto do equipamento com fins de torná-lo operacional.</p>
+                                    <i class="fas fa-4x fa-address-card text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Visão</h3>
+                                    <p class="text-muted mb-0">Visão da Empresa.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
-                                    <i class="fas fa-4x fa-balance-scale text-primary mb-4"></i>
-                                    <h3 class="h4 mb-2">Calibração com ajuste</h3>
-                                    <p class="text-muted mb-0">Realizamos a calibração e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
+                                    <i class="fas fa-4x fa-leaf text-primary mb-4"></i>
+                                    <h3 class="h4 mb-2">Valores</h3>
+                                    <p class="text-muted mb-0">Valores da Empresa.</p>
                                 </div>
                             </div>
                         </div>
