--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
                 <!-- Quality -->
-                <section class="page-section" id="quality">
+                <section class="page-section bg-dark text-white" id="quality">
                     <div class="container">
                         <h2 class="text-center mt-0">Qualidade</h2>
                         <hr class="divider my-3" />
