--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
-                                    <i class="fas fa-4x fa-file-alt-alt text-primary mb-4"></i>
+                                    <i class="fas fa-4x fa-file-signature text-primary mb-4"></i>
                                     <h3 class="h4 mb-2">Missão</h3>
                                     <p class="text-muted mb-0">Missão da Empresa.</p>
                                 </div>
