--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
                                     <p class="text-muted mb-0">Valores da Empresa.</p>
                                 </div>
                             </div>
+                            <div class="col-lg-8 text-center">
+                                <hr class="divider my-4" />
+                                    <p class="text-muted mb-5">Certificados - clique para visuaizar / fazer o download do PDF</p>
+                                    <p class="text-muted mb-5"><a href="#">Certificado IQNET</a></p>
+                                    <p class="text-muted mb-5"><a href="#">Certificado ISO</a></p>
+                                    <p class="text-muted mb-5"><a href="#">Autorização 2020</a></p>                               
+                                <hr class="divider my-4" />
+                    </div>
                         </div>
                     </div>
                 </section>
