--- a/index.html
+++ b/index.html
@@ -193,12 +193,10 @@
                                 </div>
                             </div>
                             <div class="col-lg-8 text-center">
-                                <hr class="divider my-4" />
-                                    <p class="text-muted mb-5">Certificados - clique para visuaizar / fazer o download do PDF</p>
-                                    <p class="text-muted mb-5"><a href="#">Certificado IQNET</a></p>
-                                    <p class="text-muted mb-5"><a href="#">Certificado ISO</a></p>
-                                    <p class="text-muted mb-5"><a href="#">Autorização 2020</a></p>                               
-                                <hr class="divider my-4" />
+                                <hr class="divider my-8" />
+                                    <p class="text-muted mb-8">Certificados - clique para visuaizar / fazer o download do PDF</p>
+                                    <p class="text-muted mb-8"><a href="#">Certificado IQNET</a> | <a href="#">Certificado ISO</a> | <a href="#">Autorização 2020</a></p>                               
+                                <hr class="divider my-8" />
                     </div>
                         </div>
                     </div>
