--- a/index.html
+++ b/index.html
@@ -192,13 +192,16 @@
                                     <p class="text-muted mb-0">Valores da Empresa.</p>
                                 </div>
                             </div>
+                        </div>
+                      <h2 class="text-center mt-0">Certificados</h2>
+                         <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
                                 <hr class="divider my-8" />
-                                    <p class="text-muted mb-8">Certificados - clique para visuaizar / fazer o download do PDF</p>
                                     <p class="text-muted mb-8"><a href="#">Certificado IQNET</a> | <a href="#">Certificado ISO</a> | <a href="#">Autorização 2020</a></p>                               
                                 <hr class="divider my-8" />
-                    </div>
-                        </div>
+                            </div>
+                         </div>
+
                     </div>
                 </section>
         <!-- Call to action 
