--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                                 </div>
                             </div>
                         </div>
+                        <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
                       <h2 class="text-center mt-0">Certificados</h2>
                          <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
