--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                          <div class="row justify-content-center">
                             <div class="col-lg-8 text-center">
                                 <hr class="divider my-8" />
-                                    <p class="text-muted mb-8"><a href="#">Certificado IQNET</a> | <a href="#">Certificado ISO</a> | <a href="#">Autorização 2020</a></p>                               
+                                    <p class="text-muted mb-8"><a href="/assets/CertificadoIQNET.pdf" target="_blank">Certificado IQNET</a> | <a href="/assets/CertificadoISO.pdf" target="_blank">Certificado ISO</a> | <a href="/assets/Autorizacao2020.pdf" target="_blank">Autorização 2020</a></p>                               
                                 <hr class="divider my-8" />
                             </div>
                          </div>
