--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-tools text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Manutenção corretiva</h3>
+                            <h3 class="h4 mb-2">Manutenção Corretiva</h3>
                             <p class="text-muted mb-0">Consiste no conserto do equipamento com fins de torná-lo operacional.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-balance-scale text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Calibração com ajuste</h3>
+                            <h3 class="h4 mb-2">Aferição com Ajuste</h3>
                             <p class="text-muted mb-0">Realizamos a calibração e ajuste do equipamento de pesagem, com utilização de pesos padrão.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-check-square text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Serviço 4</h3>
-                            <p class="text-muted mb-0">Descrição do Serviço 4</p>
+                            <i class="fas fa-4x fa-id-card text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Certificado de Calibração</h3>
+                            <p class="text-muted mb-0">Documento oficial, originado a partir da atividade de calibração, que a certifica.</p>
                         </div>
                     </div>
                 </div>
@@ -175,21 +175,21 @@
                                 <div class="mt-5">
                                     <i class="fas fa-4x fa-file-signature text-primary mb-4"></i>
                                     <h3 class="h4 mb-2">Missão</h3>
-                                    <p class="text-muted mb-0">Missão da Empresa.</p>
+                                    <p class="text-muted mb-0">Fornecer serviços de manutenção e calibração em balanças prestando atendimento com eficiência, segurança e excelência gerando melhores resultados financeiros aos seus clientes.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
                                     <i class="fas fa-4x fa-address-card text-primary mb-4"></i>
                                     <h3 class="h4 mb-2">Visão</h3>
-                                    <p class="text-muted mb-0">Visão da Empresa.</p>
+                                    <p class="text-muted mb-0">Ser reconhecida como uma das principais empresas prestadoras de serviços de manutenção e calibração de balanças que mantém relacionamento duradouro e confiável com seus clientes. </p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 text-center">
                                 <div class="mt-5">
                                     <i class="fas fa-4x fa-leaf text-primary mb-4"></i>
                                     <h3 class="h4 mb-2">Valores</h3>
-                                    <p class="text-muted mb-0">Valores da Empresa.</p>
+                                    <p class="text-muted mb-0">Ética<br/>Respeito<br/>Pontualidade<br/>Qualidade<br/>Confiabilidade<br/></p>
                                 </div>
                             </div>
                         </div>
