--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@
                 <section class="page-section bg-dark text-white" id="quality">
                     <div class="container">
                         <h2 class="text-center mt-0">Qualidade</h2>
+                        
+               <div class="row h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 font-weight-light mb-5">A M3 Balanças tem como compromisso atender os requisitos da norma e a satisfação do cliente buscando a melhoria contínua do sistema de gestão da qualidade.
+Com certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, propiciando o melhor serviço e a plena satisfação dos nossos clientes.
+</p>
+                    </div>
+                </div>
+                        
                         <hr class="divider my-3" />
                         <div class="row">
                             <div class="col-lg-4 col-md-6 text-center">
