--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Logo 01</div>
-                                <div class="project-name">Marca 01</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Balmak</div>
                             </div>
                         </a>
                     </div>
@@ -121,8 +121,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Logo 02</div>
-                                <div class="project-name">Marca 02</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Saturno</div>
                             </div>
                         </a>
                     </div>
@@ -130,8 +130,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Logo 03</div>
-                                <div class="project-name">Marca 03</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Toledo</div>
                             </div>
                         </a>
                     </div>
@@ -139,8 +139,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Logo 04</div>
-                                <div class="project-name">Marca 04</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Triunfo</div>
                             </div>
                         </a>
                     </div>
@@ -148,8 +148,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Logo 05</div>
-                                <div class="project-name">Marca 05</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Ramuza</div>
                             </div>
                         </a>
                     </div>
@@ -157,8 +157,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Marte</div>
                             </div>
                         </a>
                     </div>
@@ -166,8 +166,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Digitron</div>
                             </div>
                         </a>
                     </div>
@@ -175,8 +175,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Welmy</div>
                             </div>
                         </a>
                     </div>                    
@@ -184,8 +184,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Urano</div>
                             </div>
                         </a>
                     </div>
@@ -193,8 +193,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Alfa</div>
                             </div>
                         </a>
                     </div>
@@ -202,8 +202,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Weightech</div>
                             </div>
                         </a>
                     </div>
@@ -211,8 +211,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Micheletti</div>
                             </div>
                         </a>
                     </div>
@@ -220,8 +220,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Líder</div>
                             </div>
                         </a>
                     </div>
@@ -229,8 +229,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Ohaus</div>
                             </div>
                         </a>
                     </div>
@@ -238,8 +238,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Magna</div>
                             </div>
                         </a>
                     </div>
@@ -247,8 +247,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Logo 06</div>
-                                <div class="project-name">Marca 06</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Filizola</div>
                             </div>
                         </a>
                     </div>                    
