--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">História</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 13 anos de experiência, oferecendo a seus clientes um serviço de excelência em manutenção de balanças e sistemas de pesagem.<br/><br/>Com certificação ISO 9001, a M3 opera sob os mais rígidos padrões de qualidade, com fins de propiciar o melhor serviço e a plena satisfação de seus clientes.<br/><br/></p>
+                        <p class="text-white-50 mb-4">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.
+Surgiu do desejo de prestar um atendimento personalizado às empresas de diversos segmentos, sejam estas, comércios ou indústrias.
+Atendemos comércios como padarias, pizzarias, mercados, açougues, restaurantes, academias, hospitais, ferro velhos, feirantes, bares e indústrias químicas, têxteis, alimentícias, metalúrgicas, cosméticas, farmacêuticas e autopeças.
+Com uma estrutura adequada ao tipo de serviço que se dispõe a realizar e junto dos seus colaboradores, que são altamente treinados e capacitados, planejam as ações para que seus clientes atinjam seus objetivos com a máxima qualidade.
+Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medidas do Estado de São Paulo), assim como certificação ISO 9001:2015.
+<br/><br/></p>
                         <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Conheça Nossos Serviços</a>
                     </div>
                 </div>
