--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">A M3 Balanças é uma empresa com mais de 20 anos de experiência em manutenção e calibração de balanças.<br>
-                            Surgiu do desejo de prestar um atendimento personalizado às empresas de diversos segmentos, sejam estas, comércios ou indústrias.</p>
+                        <p class="text-white-75 font-weight-light mb-5">Com mais de 20 anos de experiência em manutenção e calibração de balanças.<br>
+                            Certificação ISO 9001:2015, operamos sob os mais rígidos padrões de qualidade, propiciando o melhor serviço e a plena satisfação dos nossos clientes.</p>
                         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Saiba Mais</a>
                     </div>
                 </div>
