--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Possuímos Atestado de Autorização do IPEM – SP (Instituto de Pesos e Medida
                         
                <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">Trabalhamos com diversos parceiros e temos o cuidado de estudar a necessidade do cliente para oferecer o produto adequado.</p>
+                        <p class="text-black-75 font-weight-light mb-5">Trabalhamos com diversos parceiros e temos o cuidado de estudar a necessidade do cliente para oferecer o produto adequado.</p>
                     </div>
                 </div>
                 
